<resources>
    <string name="app_name">eduRIDM</string>
    <string name="app_slogan">Your Buddy for College Acads</string>

    <!--  Welcome Screen  -->
    <string name="google_sign_in">Sign in</string>

    <!--  Add Plan Screen  -->
    <string name="add_plan_title">Add Plan</string>
    <string name="plan_title">Title</string>
    <string name="repeat_plan">Repeat This Plan</string>
    <string name="start_date">Start Date</string>
    <string name="repeat_for">Repeat For</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="desc">Description</string>
    <string name="priority">Priority</string>
    <string name="add_plan">Add</string>
    <string name="repeat_on">Repeat On</string>
    <string name="name_edittext_hint">Name</string>
    <string name="select_date_hint">Select a date</string>
    <string name="add_description_hint">Add a Description…</string>

    <string-array name="repeat_for_entries">
        <item>None</item>
        <item>Semester</item>
        <item>Year</item>
        <item>Month</item>
    </string-array>

    <string-array name="priority_entries">
        <item>High</item>
        <item>Low</item>
    </string-array>

    <!--  Add Evaluative Screen  -->
    <string name="add_evaluative_header">Add Evaluative</string>
    <string name="subject">Subject</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="syllabus">Description</string>
    <string name="nature">Nature</string>
    <string name="duration">Duration(in Minutes)</string>
    <string name="button_add">Add</string>

    <string-array name="add_evaluative_type">
        <item>Quiz</item>
        <item>Lab Quiz</item>
        <item>Assignment</item>
        <item>Project</item>
        <item>Midsem</item>
        <item>Compre</item>
    </string-array>

    <string-array name="add_evaluative_nature">
        <item>Open Book</item>
        <item>Closed Book</item>
        <item>Partial Open Book</item>
    </string-array>

    <!--  Add Extra Class Screen  -->
    <string name="add_extra_class_header">Add Extra Class</string>

    <string-array name="add_extra_class_type">
        <item>Lecture</item>
        <item>Tutorial</item>
        <item>Lab</item>
    </string-array>

    <!--  Register Screen  -->
    <string name="register_header">You look like a new user,</string>
    <string name="register_sub_header">We would like to know about you…</string>
    <string name="enter_name">What should we call you?</string>
    <string name="your_name_hint">Your Name…</string>
    <string name="college_id">Enter your College ID</string>
    <string name="college_id_hint">Your ID…</string>
    <string name="are_you_a_fresher">Are you a Fresher?</string>
    <string name="current_sem">Which semester are\nyou currently in?</string>
    <string name="current_cg">Enter your Current\nCGPA</string>
    <string name="current_cg_hint">8.69</string>
    <string name="num_creds">Enter number of\ncredits completed</string>
    <string name="num_creds_hint">74</string>
    <string name="button_next">Next</string>

    <string-array name="semester_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>PS 1</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <!--  Evaluative Card  -->
    <string name="course_code">CS F314</string>
    <string name="course_name">Software Development for\nPortable Devices</string>
    <string name="evaluative_date">16/10/1022</string>
    <string name="evaluative_time">10:00</string>
    <string name="evaluative_type">Type:</string>
    <string name="evaluative_type_text">Quiz</string>
    <string name="evaluative_syllabus">Description:</string>
    <string name="evaluative_syllabus_desc">Activity Lifecycle, Fragments, Database- SQLite\nRoom, Layouts, App Architecture.</string>
    <string name="evaluative_nature">Nature:</string>
    <string name="nature_value">Open Book</string>
    <string name="evaluative_duration">Duration:</string>
    <string name="duration_value">30 Minutes</string>

    <!--  Backlog Card  -->
    <string name="course_name_backlog">Software Development for Portable Devices</string>
    <string name="backlog_date">12 October 2022</string>
    <string name="backlog_extra">Extra Class</string>
    <string name="backlog_lec">Lec</string>
    <string name="backlog_tut">Tut</string>
    <string name="backlog_lab">Lab</string>

    <!--  Settings Screen  -->
    <string name="settings_header">Settings</string>
    <string name="about_us">About Us</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="restore_your_data">Restore Your Data</string>
    <string name="backup_your_data">Backup Your Data</string>

    <!--  Home Screen  -->
    <string name="salutation_text">Hello,</string>
    <string name="user_name">User</string>
    <string name="upcoming_evals_header">Upcoming Evals</string>
    <string name="your_classes_header">Your Classes</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="lecture_text">L1</string>
    <string name="class_time_text">10:00 - 10:50</string>

    <!--  Planner Card  -->
    <string name="time_duration">10:00-12:30</string>
    <string name="plan_name">Android Development</string>
    <string name="priority_type">Priority:</string>
    <string name="description_plan">Description:</string>
    <string name="desc_info">Fragment, TopBar design, Android Architectures, Databases, Multiple activities</string>
    <string name="priority_info">High</string>

    <!--  Profile Screen  -->
    <string name="profile_name">Merchant Dhruv Deepesh Shital</string>
    <string name="profile_email">f20202063@hyderabad.bits-pilani.ac.in</string>
    <string name="personal_details_header">Personal Details</string>
    <string name="current_semester_header">Current Semester</string>
    <string name="semester_detail">2022-23 Semester I</string>
    <string name="your_cgpa_header">Your CGPA</string>
    <string name="cgpa_detail">8.69</string>
    <string name="your_timetable_header">Your TimeTable</string>

    <!--  Grade Card  -->
    <string name="grade_dept_code">CS</string>
    <string name="grade_course_name">Software Development for Portable Devices</string>
    <string name="grade_course_code">F314</string>

    <!--  Add Course Card  -->
    <string name="course_code_heading">Course Code</string>
    <string name="lecture_heading">Lecture</string>
    <string name="tut_heading">Tutorial</string>
    <string name="lab_heading">Lab</string>
    <string name="add_course_name">Software Development for Portable Devices</string>

    <!--  Update CGPA  -->
    <string name="update_cgpa">Update CGPA</string>
    <string name="current_cgpa">Current CGPA</string>
    <string name="current_cg_value">8.500</string>
    <string name="sgpa">SGPA</string>
    <string name="final_cgpa">Final CGPA</string>
    <string name="sgpa_value">8.500</string>
    <string name="final_cgpa_value">8.500</string>
    <string name="update">Calculate</string>

    <string-array name="grades">
        <item>A</item>
        <item>A-</item>
        <item>B</item>
        <item>B-</item>
        <item>C</item>
        <item>C-</item>
        <item>D</item>
        <item>E</item>
        <item>NC</item>
    </string-array>

    <!--  Add Timetable  -->
    <string name="add_tt">Add Timetable</string>
    <string name="add_course">Add Course</string>
    <string name="skip">Skip</string>
    <string name="submit">Let\'s go!!!</string>

    <!--  Planner Screen  -->
    <string name="planner_heading">Your Plans</string>

    <!--  My Acads  -->
    <string name="my_acads_header_eval">Evaluatives</string>
    <string name="my_acads_header_backlog">Your Backlogs</string>
    <string name="evals">Evals</string>
    <string name="backlog">Backlog</string>

    <!--  Edit Timetable  -->
    <string name="edit_tt">Edit Timetable</string>
    <string name="edit_button_text">Edit</string>

    <!--  Bottom Navigation  -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_planner">My Acads</string>
    <string name="bottom_nav_acads">Planner</string>

    <string-array name="dummy_entries">
        <item>Dummy</item>
    </string-array>
    <string-array name="extra_class_dummy">
        <item>CS F314 L1</item>
    </string-array>
    <string-array name="time_dummy">
        <item>12:30</item>
        <item>14:20</item>
    </string-array>
    <string-array name="date_dummy">
        <item>2022-11-23</item>
        <item>2022-11-24</item>
        <item>2022-11-25</item>
        <item>2022-11-26</item>
        <item>2022-11-27</item>
        <item>2022-11-28</item>
        <item>2022-11-29</item>
    </string-array>
</resources>
