<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ridm.eduRIDM.screen.addplan.AddPlanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_plan_header"
            style="@style/form_header_style"
            android:layout_marginTop="32dp"
            android:text="@string/add_plan_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_title"
            style="@style/form_text_style"
            android:layout_marginTop="32dp"
            android:text="@string/plan_title"
            app:layout_constraintEnd_toEndOf="@+id/editText_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_name"
            app:layout_constraintTop_toBottomOf="@+id/add_plan_header" />

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/name_edittext_hint"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title" />

        <TextView
            android:id="@+id/textView_date"
            style="@style/form_text_style"
            android:layout_marginTop="32dp"
            android:text="@string/start_date"
            app:layout_constraintEnd_toEndOf="@+id/date_picker"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/date_picker"
            app:layout_constraintTop_toBottomOf="@+id/editText_name" />

        <EditText
            android:id="@+id/date_picker"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_border"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/calender_icon"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/select_date_hint"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_date" />

        <TextView
            android:id="@+id/textView_start_time"
            style="@style/form_text_style"
            android:layout_marginTop="32dp"
            android:text="@string/start_time"
            app:layout_constraintEnd_toEndOf="@+id/spinner_start_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_start_time"
            app:layout_constraintTop_toBottomOf="@+id/date_picker" />

        <EditText
            android:id="@+id/spinner_start_time"
            android:layout_width="136dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_border"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_baseline_access_time_24"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_start_time" />

        <TextView
            android:id="@+id/textView_end_time"
            style="@style/form_text_style"
            android:text="@string/end_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_start_time"
            app:layout_constraintEnd_toEndOf="@+id/spinner_end_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_end_time" />

        <EditText
            android:id="@+id/spinner_end_time"
            android:layout_width="136dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_border"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_baseline_access_time_24"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/spinner_start_time"
            app:layout_constraintTop_toBottomOf="@+id/textView_end_time" />

        <TextView
            android:id="@+id/textView_desc"
            style="@style/form_text_style"
            android:layout_marginTop="32dp"
            android:text="@string/desc"
            app:layout_constraintEnd_toEndOf="@+id/editText_desc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_desc"
            app:layout_constraintTop_toBottomOf="@+id/spinner_start_time" />

        <EditText
            android:id="@+id/editText_desc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/add_description_hint"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_desc" />

        <TextView
            android:id="@+id/textView_priority"
            style="@style/form_text_style"
            android:layout_marginTop="32dp"
            android:text="@string/priority"
            app:layout_constraintEnd_toEndOf="@+id/spinner_priority"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_priority"
            app:layout_constraintTop_toBottomOf="@+id/editText_desc" />

        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="136dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/spinner_border"
            android:entries="@array/priority_entries"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_priority" />

        <Button
            android:id="@+id/button_submit_plan"
            style="@style/form_button_style"
            android:text="@string/add_plan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>