<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/settings"
            style="@style/form_header_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/settings_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_logout"
            style="@style/settings_option_style"
            android:layout_marginTop="50dp"
            android:drawableEnd="@drawable/ic_baseline_exit_to_app_24"
            android:text="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />

        <Button
            android:id="@+id/button_contact_us"
            style="@style/settings_option_style"
            android:drawableEnd="@drawable/ic_baseline_contacts_24"
            android:text="@string/contact_us"
            app:layout_constraintBottom_toTopOf="@+id/button_about_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_logout" />

        <Button
            android:id="@+id/button_about_app"
            style="@style/settings_option_style"
            android:drawableEnd="@drawable/ic_baseline_info_24"
            android:text="@string/about_app"
            app:layout_constraintBottom_toTopOf="@+id/button_about_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_contact_us" />

        <Button
            android:id="@+id/button_about_us"
            style="@style/settings_option_style"
            android:layout_marginBottom="50dp"
            android:drawableEnd="@drawable/ic_baseline_people_24"
            android:text="@string/about_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_about_app" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
